# dot-sync

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: main.cpp.26518D086316011D.idx  main.cpp.6D12EF89E2D7167A.idx
include/: utils.h
src/: main.cpp
src/classes/: utils.cpp
src/classes/tests/: argParseTests.cpp
